# OD_Caster_Bridge

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/gui/: app.rs  widgets.rs
src/http/: logos.rs  mod.rs  server.rs
src/managers/: appdata.rs  mod.rs  rounds.rs
src/ws/: api.rs  mod.rs  server.rs  state.rs
