[package]
name = "OD_Caster_Bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
tokio = { version = "1.49.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
indexmap = { version = "2.13.0", features = ["serde"] }
rfd = "0.17.2"