[package]
name = "OD_Caster_Bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui_extras = { version = "0.34.3", features = ["image", "http"] }
image = { version = "0.25.9", features = ["png", "jpeg"] }

tokio = { version = "1.49.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
tiny_http = "0.12.0"

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
reqwest = { version = "0.13.1", features = ["json"] }
indexmap = { version = "2.13.0", features = ["serde"] }
dirs = "6.0.0"
rfd = "0.17.2"
regex = "1.12.4"
